# rust

./: .gitignore
sample1/: .gitignore  Cargo.toml  Rocket.toml
sample1/src/: lib.rs  main.rs  main_rocket.rs
sample1/src/config/: app_dev.json  app_dev.toml  app_prod.json  app_prod.toml  mod.rs
sample1/src/config/model/: mod.rs
sample1/src/db/: mod.rs
sample1/src/db/model/: model.rs
sample1/src/db/mysql/: mod.rs  my_sql_service.rs
sample1/src/file/: inside_file.rs  mod.rs
sample1/src/file/inside/: inside_file1.rs  mod.rs
sample1/src/sample/: customer.rs
sample1/src/web/: mod.rs  routs.rs
sample1/tests/: integration_tests.rs
webui/: Cargo.toml  build_.rs
webui/src/: main.rs
webui/src/static/: index.html
wspace/: .dockerignore  .env  .gitignore  Cargo.toml  build-mysql.dockerfile  build.dockerfile  docker-build.sh  docker-run.sh  docker.sh  watch-wg_actix.sh
wspace/.cargo/: config
wspace/.run/: Run config.run.xml  Run show_posts.run.xml  Run wg_sample_app.run.xml  Test test__insert_post.run.xml
wspace/config/src/common/: error.rs  log.rs  mod.rs
wspace/config/src/common/config/: app_config.rs  clap.rs  mod.rs  model.rs
wspace/config/tests/config/: app_config.yaml  app_config1.yaml
wspace/db/: Cargo.toml
wspace/db/migrations/2019-01-28-014819_migration/: down.sql
wspace/db/src/: lib.rs
wspace/db/tests/: db-integration.rs  test-run.sh
wspace/db_diesel/: .env  Cargo.toml
wspace/db_diesel/migrations/2019-01-28-014819_migration/: up.sql
wspace/db_diesel/src/: config.rs  lib.rs  models.rs  schema.rs  show_posts.rs
wspace/db_diesel/src/util/: connection.rs
wspace/db_diesel/tests/: db-integration.rs
wspace/db_mysql/: .env  Cargo.toml  test.ini  test.yaml
wspace/db_mysql/src/: config.txt  lib.rs
wspace/util/: Cargo.toml
wspace/util/src/: lib.rs
wspace/web/: Cargo.toml
wspace/web/src/: lib.rs
wspace/web/tests/: web-integration.rs
wspace/web_server/: Cargo.toml
wspace/web_server/src/: log.rs  main.rs
wspace/web_server/src/schema/: mod.rs
wspace/web_server/src/util/: mod.rs
wspace/wg_actix/: Cargo.toml  actix.http
wspace/wg_actix/src/: greeter.rs  guards.rs  main.rs  test.json
wspace/wg_grpc_tonic/: Cargo.toml  build.rs
wspace/wg_grpc_tonic/proto/: helloworld.proto
wspace/wg_grpc_tonic/src/: client.rs  lib.rs  main.rs  server.rs  wg_util_1.rs
wspace/wg_kafka/: Cargo.toml  kafka-docker-compose.yml
wspace/wg_kafka/src/: lib.rs  model.rs
wspace/wg_macro/: Cargo.toml
wspace/wg_macro/src/: lib.rs
wspace/wg_proto/: Cargo.toml  build.rs
wspace/wg_proto/proto/: sample.proto  sample1.proto
wspace/wg_proto/src/: main.rs
wspace/wg_protobuf_goog/: Cargo.toml  build.rs
wspace/wg_protobuf_goog/src/: main.rs
wspace/wg_protobuf_goog/src/proto/: sample.proto  sample1.proto
wspace/wg_sample_app/: Cargo.toml  build.rs
wspace/wg_sample_app/resources/: app_config.toml  app_config.yaml  app_config1.yaml
wspace/wg_sample_app/src/: main.rs  test.txt
wspace/wg_util/: Cargo.toml
wspace/wg_util/src/: common.rs  lib.rs
wspace/wg_util/src/common/: build_util.rs  io.rs  iterator_ext.rs  log.rs  mod.rs  option_ext.rs  result_ext.rs
wspace/wg_util/src/common/config/: app_config.rs  clap.rs  log.rs  mod.rs  model.rs  rust_app.rs
wspace/wg_util/src/common/config/log/: env_log.rs  mod.rs  tracing.rs
