[package]
name = "sample1"
version = "0.1.0"
authors = ["vladgon <vladgon@gmail.com>"]


#env = ["RUST_BACKTRACE = none"]
[dependencies]
rand = "^0.5.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "*"
toml = "*"
#rocket = "0.4.0"

[dependencies.mysql]
version = "*"
features = ["ssl"]