[workspace]
resolver = "2"
members = [
    "db_diesel",
    "wg_util",
    "web_server",
    "wg_sample_app",
    "wg_kafka",
    "wg_proto",
]

[workspace.dependencies]
wg_util = { path = "wg_util" }
anyhow = "1"
log = "0"
config = "0.13"
env_logger = "0.11.0"
serde = "1"
clap = "4"
diesel = "2"
tokio = "1"
futures = "0"
tracing = "0"
tracing-subscriber = "0"
tracing-futures = "0"
ctor = "0.2.6"
chrono = "0.4.31"
serde_json = "1.0"
rand = "0.8"
rayon = "1"