[workspace]
resolver = "2"
members = [
    #    "db_diesel",
    "wg_util",
    #    "web_server",
    #    "wg_sample_app",
    #    "wg_kafka",
    #    "wg_proto",
    #    "wg_protobuf_goog",
    "wg_grpc_tonic",
    "wg_actix",
]
[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[workspace.dependencies]
wg_util = { path = "wg_util" }
anyhow = "1"
log = "0"
#regression in version 0.14.0 camel case is failing to deserialze
config = "0.13.4"
env_logger = "0.11.0"
serde = "1"
clap = "4"
diesel = "2"
tokio = "1"
futures = "0"
tracing = "0"
tracing-subscriber = "0"
tracing-futures = "0"
ctor = "0.2.6"
chrono = "0.4.31"
serde_json = "1.0"
rand = "0.8"
rayon = "1"
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
tonic = "0.11"
regex = "1.10.3"
lazy_static = "1.4.0"
