[package]
name = "db_diesel"
version = "0.1.0"
authors = ["vladgon <valdgon@gmail.com>"]
edition = "2021"

[dependencies]
diesel = { version = "2", features = ["mysql"] }
dotenv = "0.15.0"
wg_util = { path = "../wg_util" }
tracing = "^0.1"
tracing-subscriber = "^0.3"
tracing-appender = "^0.2"
anyhow = "1.0"
