[package]
name = "web_server"
version = "0.1.0"
authors = ["vladgon <valdgon@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }
rand = { workspace = true }
wg_util = { workspace = true }
ctor = { workspace = true }
log = { workspace = true }
proc-macro2 = "1.0.78"
wg_macro = { path = "../wg_macro" }
