[package]
name = "wg_grpc_tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-wkt = "0.5"
prost-wkt-types = "0.5"
tonic = {version =  "0.10" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
log = { workspace = true }
wg_util = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }

[build-dependencies]
tonic-build = "0.10"
prost-wkt-build = "0.5"
wg_util = { workspace = true }

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"