[package]
name = "wg_grpc_tonic"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
prost-wkt = { workspace = true }
prost-wkt-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
log = { workspace = true }
wg_util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
utoipa="4.2.0"

[build-dependencies]
tonic-build = "0.11"
prost-wkt-build = "0.5"
wg_util = { workspace = true }
