[package]
name = "wg_kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka = {version =  "0", default-features = false }
wg_util = { workspace = true }
log = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
