[package]
name = "wg_proto"
version = "0.1.0"
authors = ["vladgon <valdgon@gmail.com>"]
edition = "2021"

[dependencies]
wg_util = { workspace = true }
log = { workspace = true }
prost = "0.12"
#prost-types = "0.12"
#prost-reflect = "0.12"
#prost-helper = "0.8"
serde = { version = "1.0",features = ["derive"] }
serde_json = "1.0"
#serde_derive = "1.0"
once_cell = { version = "1.19.0", features = [] }
chrono = "0.4.32"
prost-wkt = "0.5"
prost-wkt-types = "0.5"

[build-dependencies]
prost-build = "0.12"
#prost-types = "0.12"
#prost-reflect = "0.12"
#prost-helper = "0.8"
prost-wkt-build = "0.5"
wg_util = { workspace = true }

