[package]
name = "wg_protobuf_goog"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "3.3.0"
chrono = "0.4.32"
log = "0.4.20"
protobuf-json-mapping = "3.3.0"
wg_util = { workspace = true }
#tonic = { version = "0.10.2", features = [] }
#tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
#grpc = "0.8.3"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
protoc-rust-grpc = "0.8.3"
wg_util = { workspace = true }
