[package]
name = "wg_protobuf_goog"

[lints]
workspace = true

[dependencies]
protobuf = "3.3.0"
chrono = "0.4"
log = "0.4"
protobuf-json-mapping = "3.3.0"
wg_util = { workspace = true }

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
protoc-rust-grpc = "0.8.3"
wg_util = { workspace = true }
