[package]
name = "wg_util"
version = "0.1.0"
authors = ["vladgon <valdgon@gmail.com>"]
edition = "2021"

[dependencies]
config = "0.13"
log = "0.4"
env_logger = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
