[package]
name = "wg_util"
version = "0.1.0"
authors = ["vladgon <valdgon@gmail.com>"]
edition = "2021"

[dependencies]
config = { workspace = true,  features = ["yaml" ] }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-futures = { workspace = true }
