[package]
name = "wg_util"
version = "0.1.0"
authors = ["vladgon <valdgon@gmail.com>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
config = { workspace = true, features = ["yaml", "toml", "json", "json5"] }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-futures = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
